ready for review

--- a/app/src/main/res/layout/activity_scrolling.xml
+++ b/app/src/main/res/layout/activity_scrolling.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".ScrollingActivity">
+    tools:context=".activity.ScrollingActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar"
@@ -34,6 +34,7 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <ListView
+        android:layout_marginTop="@dimen/app_bar_height"
         android:id = "@+id/list"
         android:layout_width = "wrap_content"
         android:layout_height = "wrap_content"
